    depending on reference type.

* docutils/writers/html4css1/template.txt: Added to project.

* docutils/writers/pep_html/:

  - Moved template functionality to the HTML writer.

* docutils/writers/s5_html/__init__.py:

  - Added ``view_mode`` & ``hidden_controls`` settings
    (``--view-mode`` & ``--hidden-controls/--visible-controls``
    options).

* docutils/writers/latex2e/__init__.py:

  - Add ``use-part-section``.
  - Put leavevmode before longtable to avoid having it moved before sub/pargraph.
  - Using leavemode optoin_list no longer needs to check if parent
    is a definition list.
  - Append ``\leavemode`` to definition list terms.
  - No longer write visit\_/depart_definition_list_item comments to
    output.
  - Table column width with 3 decimal places.
  - Add table stubs support (boldfont).
  - Add assemble_parts to writer.
  - Add simply support for nested tables.
  - Fix verbatim in tables if use-verbatim-when-possible.
  - Use section commands down to subparagraph.
  - Put ensuremath around some latin1 chars.
  - Set ``usepackage[utf8x]{inputenc}`` for utf-8.
  - New option ``--use-bibtex=style,db1,db2``.
  - New option ``--reference-label`` to allow usage of LaTeX ref for 
    labels in section references.
  - Add a label after every section to support sectionnumbers as reference
    labels.
  - Fix: bug# 1605376 rst2latex: bad options group list
  - Remove inactive code for use_optionlist_for_option_list.
  - Remove latex comments from option_list output.
  - Fix: bug# 1612270 double qoutes in italian literal.
  - Fix: output ``hypertarget{ node.get(refid) }{}`` from visit_target. 
  - Add option --use-latex-abstract.
  - Image width unit ``px`` is translated to ``pt``.
  - Add image height support.
  - Fix: image width ``70%`` is converted ``0.700\linewidth``.
    bug #1457388
  - Fix: Do not escape underscores in citation reference labels if
    use-latex-citations is set.