@@ -14,7 +14,7 @@
 \usepackage{ifthen}
 \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 \usepackage[DIV12]{typearea}
-%% generator Docutils: http://docutils.sourceforge.net/
+% generated by Docutils <http://docutils.sourceforge.net/>
 \newlength{\admonitionwidth}
 \setlength{\admonitionwidth}{0.9\textwidth}
 \newlength{\docinfowidth}
@@ -73,7 +73,6 @@ pdfauthor={Foo Fred;Bar Barney}
 \raggedbottom
 \begin{document}
 \maketitle
-
 %___________________________________________________________________________
 \begin{center}
 \begin{tabularx}{\docinfowidth}{lX}
