@@ -38,7 +38,7 @@ latex_head = """\
 \\usepackage{ifthen}
 \\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 \\usepackage[DIV12]{typearea}
-%% generator Docutils: http://docutils.sourceforge.net/
+% generated by Docutils <http://docutils.sourceforge.net/>
 \\newlength{\\admonitionwidth}
 \\setlength{\\admonitionwidth}{0.9\\textwidth}
 \\newlength{\\docinfowidth}
