@@ -116,6 +116,7 @@ Changes Since 0.4
 
 * docutils/writers/latex2e/__init__.py:
 
+  - Merge smaller differences from latex2e_adaptive_preamble.
   - Add ``use-part-section``.
   - Put leavevmode before longtable to avoid having it moved before sub/pargraph.
   - Using leavemode optoin_list no longer needs to check if parent
